--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,25 @@ ul{
     transition: all 0.3s ease;
 }
 
+.hidden{
+    opacity:0;
+    filter:blur(5px);
+    transform: translateX(-50%);
+    transition: all 0.3s;
+}
+
+.show{
+    opacity:1;
+    filter:blur(0);
+    transform: translateX(0);
+}
+
+@media(prefers-reduced-motion){
+    .hidden{
+        transition:none;
+    }
+}
+
 @media(max-width: 767px){
     .f_coloumn{
         width:50%;
